<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="76dp"
        android:text="@string/textNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/groupFuncao"
        android:layout_width="253dp"
        android:layout_height="151dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome">

        <RadioButton
            android:id="@+id/radioEmpregado"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioEmpregado" />

        <RadioButton
            android:id="@+id/radioDesempregado"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioDesempregado" />

        <RadioButton
            android:id="@+id/radioProcura"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioProcura" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="56dp"
        android:onClick="limpar"
        android:text="@string/buttonLimpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupFuncao" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:onClick="enviarDados"
        android:text="@string/buttonDica"
        app:layout_constraintStart_toEndOf="@+id/buttonLimpar"
        app:layout_constraintTop_toBottomOf="@+id/groupFuncao" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName"
        android:text="@string/editTextNome"
        app:layout_constraintStart_toEndOf="@+id/textNome"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>